añadidas alertas para usuario y footer como componente

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Iconos Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Notify CSS -->
+    <link rel="stylesheet" href="dist/notiflix-X.X.X.min.css" />
   </head>
   <body>
     <div id="root"></div>
@@ -16,4 +18,6 @@
   </body>
   <!-- Iconos Font Awesome -->
   <script src="https://kit.fontawesome.com/c4bccabf39.js" crossorigin="anonymous"></script>
+  <!-- Notify -->
+  <script src="dist/notiflix-X.X.X.min.js"></script>
 </html>
